# game-detector

./: .gitignore  CMakeLists.txt  README.md  README.pt-BR.md  buildspec.json  setup.iss
.github/workflows/: cmake-single-platform.yml
data/locale/: en-US.ini  pt-BR.ini  pt-PT.ini
src/: ConfigManager.cpp  ConfigManager.h  GameDetector.cpp  GameDetector.h  GameDetectorDock.cpp  GameDetectorDock.h  GameDetectorSettingsDialog.cpp  GameDetectorSettingsDialog.h  GameListDialog.cpp  GameListDialog.h  IPlatformService.h  IconProvider.cpp  NetworkCommon.h  PlatformManager.cpp  PlatformManager.h  PluginMain.cpp  TrovoAuthManager.cpp  TrovoAuthManager.h  TwitchAuthManager.cpp  TwitchAuthManager.h  TwitchChatBot.cpp  TwitchChatBot.h  TwitchServiceAdapter.cpp  TwitchServiceAdapter.h  plugin-main.cpp
trovo/: index.php  trovo_secrets.php
